--- a/frontEnd/src/index.html
+++ b/frontEnd/src/index.html
@@ -9,9 +9,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#1976d2">
-<link rel="stylesheet" href="styles.3ff695c00d717f2d2a11.css"></head>
+</head>
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.7fb637d055581aa28d51.js"></script><script type="text/javascript" src="main.ad114bc0f7c2bd35b6a9.js"></script></body>
+</body>
 </html>
